# mul-tools

./: test
demo-link/: CMakeLists.txt  sdkconfig
demo-link/components/DAP/: CMakeLists.txt  DAP.c  DAP_vendor.c  SWO.c  SW_DP.c  dap_utility.c  spi_op.c  spi_switch.c  uart_modify.c
demo-link/components/DAP/include/: DAP.h  DAP_config.h  cmsis_compiler.h  gpio_common.h  gpio_op.h  swo.h
demo-link/components/USBIP/: CMakeLists.txt  MSOS20_descriptor.c  USBIP.c  usb_descriptor.c  usb_handle.c
demo-link/components/USBIP/include/: MSOS20_descriptor.h  usb_descriptor.h  usb_handle.h  usbip_defs.h
demo-link/components/components/esp_event/: CMakeLists.txt
demo-link/components/components/esp_wifi/include/: esp_wifi_types_generic.h
demo-link/components/elphureLink/: CMakeLists.txt  elphureLink.c
demo-link/components/elphureLink/include/: elphureLink.h
demo-link/components/esp_if/: CMakeLists.txt  DAP_handle.c  esp_if.c  tcp_netconn.c  tcp_server.c  timer.c  uart_bridge.c  usbip_server.c  wifi_handle.c
demo-link/components/esp_if/include/: DAP_handle.h  usbip_server.h
demo-link/main/: tcp_server.c
winsair/2.Software/components/elaphureLink/: elaphureLink_protocol.c
winsair/2.Software/main/: CMakeLists.txt  DAP_handle.c  DAP_handle.h  kcp_server.c  main.c  tcp_server.c  timer.c  usbip_server.h  wifi_configuration.h  wifi_handle.c
