idf_component_register(SRCS "DAP.c"
"DAP_vendor.c"
"DAP_vendor.c"
"JTAG_DP.c"
"SWO.c"
"spi_op.c"
"spi_switch.c"
"dap_utility.c"
"SW_DP.c"
# "uart_modify.c"
                    INCLUDE_DIRS "include"
                                 "../esp_if/include"
                                 "../../components/components/soc/esp32c6/include"
                    )
